fix(i18n): update translations and fix text display issues
- Fix missing translation for achievements page description
- Add missing translations in Russian locale
- Fix member since date formatting in profile
- Update navigation text translations
- Fix admin panel button visibility
- Fix banner upload in profile page

--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -175,7 +175,7 @@
     "points": "очков",
     "earnedOn": "Получено",
     "all": "Все",
-    "trackProgress": "Отслеживайте свой прогресс и получайте награды",
+    "trackProgress": "Отслеживайте свой прогресс и получайте награды за активность",
     "noAchievements": "У вас пока нет разблокированных достижений",
     "keepUsing": "Продолжайте использовать MediaVault, чтобы получать достижения и награды",
     "allUnlocked": "Все достижения разблокированы!",
