fix: resolve tailwind configuration and styling issues
- Fix PostCSS and Tailwind CSS configuration
- Update color scheme variables in tailwind config
- Remove Inter font to resolve Google Fonts errors
- Add proper CSS base layer definitions
- Update VSCode settings for better CSS/Tailwind support
- Clean up project structure and dependencies

This commit resolves styling issues and stabilizes the project's CSS configuration.

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -216,15 +216,42 @@
       "add": "Add",
       "delete": "Delete",
       "type": "Type",
-      "status": "Status"
-    },
-    "statistics": {
-      "title": "Statistics",
-      "totalUsers": "Total Users",
-      "totalMedia": "Total Media",
-      "adminUsers": "Admin Users",
-      "activeToday": "Active Today",
-      "newThisWeek": "New This Week"
+      "status": "Status",
+      "addNew": "Add New Content",
+      "backToAdmin": "Back to Admin",
+      "form": {
+        "title": "Title",
+        "titlePlaceholder": "Enter title",
+        "originalTitle": "Original Title",
+        "originalTitlePlaceholder": "Enter original title",
+        "type": "Type",
+        "description": "Description",
+        "descriptionPlaceholder": "Enter description",
+        "year": "Year",
+        "duration": "Duration",
+        "durationPlaceholder": "Duration in minutes",
+        "actors": "Actors",
+        "actorName": "Actor Name",
+        "actorNamePlaceholder": "Enter actor name",
+        "character": "Character",
+        "characterPlaceholder": "Enter character name",
+        "photo": "Photo",
+        "chooseFile": "Choose file",
+        "noFileChosen": "No file chosen",
+        "addActor": "Add Actor",
+        "removeActor": "Remove Actor",
+        "directors": "Directors",
+        "directorName": "Director Name",
+        "directorNamePlaceholder": "Enter director name",
+        "addDirector": "Add Director",
+        "removeDirector": "Remove Director",
+        "poster": "Poster",
+        "video": "Video",
+        "submit": "Add Media",
+        "submitting": "Adding...",
+        "movie": "Movie",
+        "tv": "TV Show"
+      }
     }
   },
   "loading": "Loading...",
