--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -205,11 +205,42 @@
     },
     "media": {
       "title": "Медиа контент",
+      "add": "Добавить контент",
       "edit": "Редактировать",
-      "add": "Добавить",
       "delete": "Удалить",
       "type": "Тип",
-      "status": "Статус"
+      "status": "Статус",
+      "addNew": "Добавить новый контент",
+      "backToAdmin": "Вернуться в админ-панель",
+      "form": {
+        "title": "Название",
+        "titlePlaceholder": "Введите название",
+        "originalTitle": "Оригинальное название",
+        "description": "Описание",
+        "descriptionPlaceholder": "Введите описание",
+        "type": "Тип",
+        "year": "Год",
+        "duration": "Продолжительность",
+        "durationPlaceholder": "Длительность в минутах",
+        "genres": "Жанры",
+        "selectGenres": "Выберите жанры",
+        "poster": "Постер",
+        "video": "Видео",
+        "actors": "Актёры",
+        "addActor": "Добавить актёра",
+        "removeActor": "Удалить актёра",
+        "actorName": "Имя актёра",
+        "character": "Роль",
+        "photo": "Фото",
+        "directors": "Режиссёры",
+        "addDirector": "Добавить режиссёра",
+        "removeDirector": "Удалить режиссёра",
+        "directorName": "Имя режиссёра",
+        "submit": "Добавить",
+        "submitting": "Добавление...",
+        "movie": "Фильм",
+        "tv": "Сериал"
+      }
     },
     "stats": {
       "title": "Статистика",
