feat(i18n): add missing translations and improve form localization
- Add missing translations for form placeholders and labels
- Add translations for actor and director form fields
- Update file input labels for both languages
- Fix translation keys for original title and actor name
- Ensure consistent language switching in media form

This commit completes the localization of the media form, ensuring all text elements
are properly translated in both Russian and English interfaces.

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -250,8 +250,23 @@
         "submit": "Add Media",
         "submitting": "Adding...",
         "movie": "Movie",
-        "tv": "TV Show"
+        "tv": "TV Show",
+        "fileInputLabels": {
+          "chooseFile": "Choose file",
+          "noFileChosen": "No file chosen",
+          "browse": "Browse"
+        },
+        "photoPlaceholder": "Choose photo",
+        "name": "Name",
+        "namePlaceholder": "Enter name"
       }
+    },
+    "stats": {
+      "totalUsers": "Total Users",
+      "totalMedia": "Total Media",
+      "adminUsers": "Admin Users",
+      "activeToday": "Active Today",
+      "newThisWeek": "New This Week"
     }
   },
   "loading": "Loading...",
