--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -303,8 +303,20 @@
       "searchLabel": "Поиск",
       "movies": "Фильмы",
       "tvShows": "Сериалы",
-      "all": "Все"
-    }
+      "all": "Все",
+      "minRating": "Минимальный рейтинг"
+    },
+    "sort": {
+      "rating": "По рейтингу",
+      "views": "По просмотрам",
+      "newest": "Сначала новые",
+      "oldest": "Сначала старые"
+    },
+    "empty": {
+      "title": "Ничего не найдено",
+      "description": "Попробуйте изменить параметры поиска"
+    },
+    "loading": "Загрузка результатов..."
   },
   "auth": {
     "signIn": "Войти",
@@ -341,5 +353,31 @@
     "light": "Светлая",
     "dark": "Тёмная",
     "system": "Системная"
+  },
+  "watch": {
+    "about": "О фильме",
+    "watch": "Смотреть",
+    "castAndCrew": "Актёры и съёмочная группа",
+    "cast": "В ролях",
+    "directors": "Режиссеры",
+    "rating": "Рейтинг",
+    "comments": "Комментарии",
+    "addComment": "Добавить комментарий...",
+    "submit": "Отправить",
+    "points": "баллов",
+    "noRating": "Нет оценок",
+    "rateThis": "Оценить",
+    "login": {
+      "required": "Войдите, чтобы оценить",
+      "requiredComment": "Войдите, чтобы комментировать"
+    },
+    "success": {
+      "rating": "Оценка сохранена",
+      "comment": "Комментарий добавлен"
+    },
+    "error": {
+      "rating": "Ошибка при сохранении оценки",
+      "comment": "Ошибка при добавлении комментария"
+    }
   }
 }
