fix(media): fix video page loading and comments display
- Update media fetching logic with separate queries for comments and profiles
- Fix relationship between media_items and comments tables
- Add proper error handling for database queries
- Improve data transformation for comments and genres
- Add loading states and error messages
- Fix user profile data association with comments
- Add priority attribute to hero images for better performance

This commit resolves the media page loading issues and improves the overall
user experience when viewing individual media items.

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -298,7 +298,7 @@
   "discover": {
     "search": "Search",
     "filters": "Filters",
-    "searchPlaceholder": "Search for movies and TV shows...",
+    "searchPlaceholder": "Search movies and TV shows...",
     "filter": {
       "title": "Filters",
       "searchLabel": "Search",
@@ -386,5 +386,14 @@
       "rating": "Failed to save rating",
       "comment": "Failed to add comment"
     }
+  },
+  "media": {
+    "types": {
+      "movie": "Movie",
+      "tv": "TV Show"
+    },
+    "duration": "{{count}} min",
+    "minutes": "min",
+    "ratings": "ratings"
   }
 }
