--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -315,8 +315,7 @@
     "empty": {
       "title": "Ничего не найдено",
       "description": "Попробуйте изменить параметры поиска"
-    },
-    "loading": "Загрузка результатов..."
+    }
   },
   "auth": {
     "signIn": "Войти",
@@ -354,19 +353,25 @@
     "dark": "Тёмная",
     "system": "Системная"
   },
+  "media": {
+    "types": {
+      "movie": "Фильм",
+      "tv": "Сериал"
+    },
+    "duration": "{{count}} мин.",
+    "minutes": "мин.",
+    "ratings": "оценок"
+  },
   "watch": {
     "about": "О фильме",
     "watch": "Смотреть",
     "castAndCrew": "Актёры и съёмочная группа",
     "cast": "В ролях",
-    "directors": "Режиссеры",
+    "directors": "Режиссёры",
     "rating": "Рейтинг",
     "comments": "Комментарии",
-    "addComment": "Добавить комментарий...",
+    "addComment": "Добавить комментарий",
     "submit": "Отправить",
-    "points": "баллов",
-    "noRating": "Нет оценок",
-    "rateThis": "Оценить",
     "login": {
       "required": "Войдите, чтобы оценить",
       "requiredComment": "Войдите, чтобы комментировать"
